Quorum/Library/Tests/Expressions/Pass/SubDoubleDouble.quorum
class Main
    action Main
        number a = 1.0 - 1.0
        output a
        output 1.0 - 1.0
    end
end