Quorum/Library/Tests/Expressions/Fail/NoVariable2.quorum
number speed = 100
number time = 0.01
if -1 * speed * time < targetX - x and targetX - x < speed * time
    output targetX
end
if -1 * speed * time < targetY - y and targetY - y < speed * time
    output targetY
end